traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:36: error: Unit does not take parameters
    right()()
           ^